# y_bayer

./: pyproject.toml  Чек-лист
src/: containers.py  main.py  shop_assistant.db  utils.py
src/api/: bot_handlers.py  service_handlers.py
src/models/: cart.py  product.py  shop.py  user.py  user_request.py
src/orm/: __init__.py  cart_orm.py  product_orm.py  shop_orm.py  user_orm.py  user_request_orm.py
src/repositories/: base_repository.py  cart_item_repository.py  cart_repository.py  product_repository.py  request_item_repository.py  shop_repository.py  user_repository.py  user_request_repository.py
src/scraping/: base_scraper.py  playwright_scraper.py  scraper.py  splash_setup.py
src/scraping/legacy/: scraper.py  settings.py
src/services/: cart_service.py  nlp_service.py  product_service.py  scraping_service.py  telegram_service.py  user_request_service.py  user_service.py
test/: api_products.py  playwright_test.py  request.py  tg_bot.py
